# This is a combination of 7 commits. # This is the 1st commit message:
updateJenkinsFile

# This is the commit message #2:

fix scripts methods are not defined

# This is the commit message #3:

wHideParameterDefinitionObject

# This is the commit message #4:

wHideParameterDefinitionObject

# This is the commit message #5:

fix Stash

# This is the commit message #6:

collectLogsOnlyOnFailure

# This is the commit message #7:

node label waves to vostok