@@ -1,40 +1,85 @@
 #!/usr/bin/env groovy
 
+/*
+This is a Jenkins scripted pipeline to launch integration tests. We use following plugins:
+- Extended Choice parameter: https://plugins.jenkins.io/extended-choice-parameter
+- Generic Webhook Trigger plugin: https://wiki.jenkins.io/display/JENKINS/Generic+Webhook+Trigger+Plugin
+
+We alse need to 
+
+On the GitHub side navigate to Repository Settings > Webhooks >
+- Content type: application/json
+- SSL Verification: enabled
+- Events: choose the events you want to trigger build on
+- Payload URL: https://<jenkins_web_address>/generic-webhook-trigger/invoke?token=wavesPipelineTriggerToken
+
+- generate a personal access token with 'repo' permissions add it to Jenkins secrets and specify ID to 'githubPersonalToken' variable
+
+To set up pipeline in Jenkins: New Item > Pipeline > name it > OK > Scroll to Pipeline pane >
+- Definition: Pipeline script from SCM, SCM: Git, Repo: 'https://github.com/wavesplatform/Waves.git',
+- Lightweight checkout: disabled. Save settings and launch pipeline
+*/
+
 @Library('jenkins-shared-lib')
 import devops.waves.*
 ut = new utils()
+scripts = new scripts()
 def buildTasks = [:]
-def repo_url = 'https://github.com/wavesplatform/Waves.git'
+def repoUrl = 'https://github.com/wavesplatform/Waves.git'
+def branch = false
+def testTasks = [:]
+def gitCommit
+def githubRepo = 'wavesplatform/Waves'
+def githubPersonalToken = 'waves-github-token'
 
 properties([
+    ut.buildDiscarderPropertyObject('14', '30'),
     parameters([
-        listGitBranches(
-            branchFilter: 'origin/(.*)',
-            credentialsId: '',
-            defaultValue: '',
-            name: 'branch',
-            listSize: '20',
-            quickFilterEnabled: false,
-            remoteURL: repo_url,
-            selectedValue: 'NONE',
-            sortMode: 'DESCENDING_SMART',
-            type: 'PT_BRANCH')])
+        ut.wHideParameterDefinitionObject('pr_from_ref'),
+        ut.choiceParameterObject('branch', scripts.getBranches(repoUrl), Boolean.TRUE)
+    ]),
+
+    pipelineTriggers([
+        [$class: 'GenericTrigger',
+        genericVariables: [
+            [ key: 'source', value: '$.ref', regexpFilter: 'refs/heads/', defaultValue: '' ],
+            [ key: 'push_from_sha', value: '$.after'],
+            [ key: 'pr_action', value: '$.action'],
+            [ key: 'deleted', value: '$.deleted'],
+            [ key: 'pr_from_ref', value: '$.pull_request.head.ref' ],
+            [ key: 'pr_from_sha', value: '$.pull_request.head.sha' ]],
+        // this is a place where some magic occurs ;)
+        regexpFilterText: '$deleted$source$pr_action',
+        regexpFilterExpression: 'falsemaster|falseversion.+|opened|reopened|synchronize',
+        causeString: "Triggered by GitHub Webhook",
+        printContributedVariables: true,
+        printPostContent: true,
+        token: 'wavesPipelineTriggerToken' ]
+    ])
 ])
 
 stage('Aborting this build'){
-    // On the first launch pipeline doesn't have any parameters configured and must skip all the steps
-    if (env.BUILD_NUMBER == '1'){
-        echo "This is the first run of the pipeline! It is now should be configured and ready to go!"
-        currentBuild.result = Constants.PIPELINE_ABORTED
-        return
+
+    // Here we check if parameter 'branch' does not have any assigned value or it's value
+    // is a default one -- '-- Failed to retrieve any data---'
+    // In this case we won't proceed
+    if (params.branch && params.branch.length() && ! params.branch.contains('--')){
+        branch = params.branch
     }
-    if (! params.branch ) {
-        echo "Aborting this build. Please run it again with the required parameters specified."
+
+    // If this is a hook with a GitHub pull request event, then we take 'branch'
+    // from params.pr_from_ref
+    if (params.pr_from_ref && params.pr_from_ref.length()){
+        branch = params.pr_from_ref
+    }
+
+    if (! branch) {
+        echo "Aborting this build. Variable 'branch' not defined. We can't proceed since the git branch is uknown..."
         currentBuild.result = Constants.PIPELINE_ABORTED
         return
     }
     else
-        echo "Parameters are specified. Branch: ${branch}"
+        echo "Parameters specified: ${params}"
 }
 
 if (currentBuild.result == Constants.PIPELINE_ABORTED){
@@ -42,59 +87,62 @@ if (currentBuild.result == Constants.PIPELINE_ABORTED){
 }
 
 timeout(time:90, unit:'MINUTES') {
-    node('wavesnode'){
+    node{
         currentBuild.result = Constants.PIPELINE_SUCCESS
         timestamps {
             wrap([$class: 'AnsiColorBuildWrapper', 'colorMapName': 'XTerm']) {
                 try {
-                    withEnv(["SBT_THREAD_NUMBER=7"]) {
+                    
+                    currentBuild.displayName = "#${env.BUILD_NUMBER} - ${branch}"
 
-                        currentBuild.displayName = "#${env.BUILD_NUMBER} - ${branch}"
+                    stage('Checkout') {
+                        sh 'env'
+                        step([$class: 'WsCleanup'])
+                        ut.checkout(branch, repoUrl)
+                        gitCommit = ut.shWithOutput("git rev-parse HEAD")
+                        stash name: 'sources', includes: '**'
+                        ut.setGitHubBuildStatus(githubRepo, githubPersonalToken, gitCommit)
+                    }
 
-                        stage('Checkout') {
-                            sh 'env'
-                            step([$class: 'WsCleanup'])
-                            checkout([
-                                $class: 'GitSCM',
-                                branches: [[ name: branch ]],
-                                doGenerateSubmoduleConfigurations: false,
-                                extensions: [],
-                                submoduleCfg: [],
-                                userRemoteConfigs: [[url: repo_url]]
-                            ])
-                        }
-
-                        stage('Unit Test') {
-                            ut.sbt '-mem 10240 checkPR'
-                        }
-
-                        stage('Check containers') {
-                            sh 'docker rmi com.wavesplatform/it com.wavesplatform/node-it com.wavesplatform/dex-it || true'
-                            sh 'docker ps -a'
-                            sh 'docker images'
-                            sh 'docker network ls'
-                            sh 'rm -rf it/target || true'
-                        }
-
-                        stage('Integration Test') {
-                            try {
-                                ut.sbt '-mem 40960 clean it/test'
-                            }
-                            catch (err) {}
-                            finally{
-                                dir('it/target/logs') {
-                                    sh "tar -czvf logs.tar.gz * || true"
+                    testTasks['Unit tests'] = {
+                        node('vostok'){
+                            stage('Unit tests') {
+                                unstash 'sources'
+                                try{
+                                    ut.sbt '-mem 10240 -Dquill.macro.log=false -J-Xms3G -J-Xmx3G -J-XX:+UseConcMarkSweepGC -J-XX:+CMSClassUnloadingEnabled ";coverage;checkPR;coverageReport"'
                                 }
-                                dir('node-it/target/logs') {
-                                    sh "tar -czvf node.logs.tar.gz * || true"
+                                finally{
+                                    sh "tar -czvf test-reports.tar.gz -C target/test-reports/ . || true"
+                                    stash name: 'test-reports', includes: 'test-reports.tar.gz'
                                 }
                             }
-                        }
-
-                        stage('Docker cleanup') {
-                            sh "docker system prune -af --volumes"
                         }
                     }
+
+                    testTasks['Integration Test'] = {
+                        node('vostok'){
+                            withEnv(["SBT_THREAD_NUMBER=7"]) {
+                                stage('Integration Test') {
+                                    unstash 'sources'
+                                    sh """
+                                        docker rmi com.wavesplatform/node-it || true
+                                        docker ps -a
+                                        docker images
+                                        docker network ls
+                                    """
+                                    try{
+                                        ut.sbt '-mem 40960 clean node-it/test'    
+                                    }
+                                    finally{
+                                        sh "docker system prune -af --volumes || true"
+                                        sh "tar -czvf node-logs.tar.gz -C node-it/target/logs/ . || true"
+                                        stash name: 'node-logs', includes: 'node-logs.tar.gz'
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    parallel testTasks
                 }
                 catch (err) {
                     currentBuild.result = Constants.PIPELINE_FAILURE
@@ -105,13 +153,13 @@ timeout(time:90, unit:'MINUTES') {
                     println(err.getCause())
                     println(err.getLocalizedMessage())
                     println(err.toString())
+                    unstash 'node-logs'
+                    unstash 'test-reports'
+                    archiveArtifacts artifacts: 'node-logs.tar.gz, test-reports.tar.gz'
                  }
                 finally{
-                    logArchiveLocation = findFiles(glob: '**/*logs.tar.gz')
-                    logArchiveLocation.each {
-                        archiveArtifacts it.path
-                    }
-                    ut.notifySlack("mtuktarov-test", currentBuild.result)
+                    ut.setGitHubBuildStatus(githubRepo, githubPersonalToken, gitCommit, currentBuild.result);
+                    ut.notifySlack("jenkins-notifications", currentBuild.result)
                 }
             }
         }
